# the_rust_programming_lang

./: .gitignore  syntax_and_semantics.md  syntax_and_semantics.txt
5. Using Structs to Structure Data/notes/: defining_and_instantiating_structs.md  example_program_using_structs.md  method_syntax.md
Chapter-10/notes/: 10.1_generic_data_types.md  10.2_traits_defining_shared_behavior.md  10.3_validating_references_with_lifetimes.md  10.4_ownership_inventory_3.md
Chapter-11/notes/: 11.1_how_to_write_tests.md  11.2_controlling_how_tests_are_run.md  11.3_test_organization.md
Chapter-12/minigrep/: README.md
Chapter-13/notes/: 13.1_closures.ipynb  13.2_iterators.md  13.3_improving_minigrep.md  13.4_loops_vs_iterators.md
Chapter-14/notes/: 14.1_release_profiles.md  14.2_publish_to_crates.io.md  14.3_cargo_workspaces.md
Chapter-15/notes/: 15.1_using_Box<T>.md  15.2_smart_pointers_as_refs.md  15.3_code_running_on_cleanup.md  15.4_ref_counted_smart_pointer_Rc<T>.md  15.5_RefCell<T>.md  15.6_ref_cycles_leaky_mem.md  smart_pointers.md
Chapter-16/concurrency/: Cargo.toml
Chapter-16/notes/: 16.1_use_threads_to_run_code_simultaneously.md  16.2_transfer_data_btwn_threads.md  16.3_shared_state_concurrency.md  16.4_sync_n_send_traits.md  fearless_concurrency.md
Chapter-17/hello-async/: Cargo.toml
Chapter-17/hello-async/src/: counting.rs  messaging.rs  num_futures.rs  streams.rs
Chapter-17/notes/: 17.1_futures_and_async_syntax.md  17.2_concurrency_with_async.md  17.3_working_with_any_number_of_futures.md  17.4_streams.md  (+3 more)
hello_world/: main
variables/: main.rs
(+89 files in other folders)
